# tinny-calc

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  README.org  calc.cabal  dummy-calc.cabal
app/: Main.hs
src/: Calc.hs  DummyCalc.hs
src/Calc/: CustomErrors.hs  Equation.hs  Lexer.hs  Operations.hs
src/Calc/Equation/: Internal.hs
src/Calc/Lexer/: AST.hs  Internal.hs
src/Calc/Operations/: Ast.hs  Lexical.hs
src/DummyCalc/: Environment.hs  Eval.hs  Language.hs  Lexer.hs  Parser.hs
src/DummyCalc/Environment/: Internal.hs  NumEnvironment.hs
src/DummyCalc/Language/Data/: Internal.hs  Operations.hs  Types.hs
src/DummyCalc/Lexer/: SyntaxError.hs  Tokens.hs
src/DummyCalc/Parser/: AST.hs  Internal.hs
src/DummyCalc/Parser/AST/: Internal.hs
src/DummyCalc/Parser/Data/: Internal.hs
test/: CalcEquationSpec.hs  CalcLexerASTSpec.hs  CalcLexerInternalSpec.hs  CalcSpec.hs  EvalSpec.hs  LexerSpec.hs  OperationsSpec.hs  ParserSpec.hs
